# account-abstraction

./: .gitignore  .gitmodules  README.md  SEPOLIA_SETUP_GUIDE.md  setup-sepolia.sh  test-anvil.sh
client/: Cargo.toml  TODO.md
client/src/: bundler.rs  config.rs  error.rs  lib.rs  main.rs  nonce.rs  paymaster.rs  userop.rs  validation.rs  wallet.rs
contracts/: foundry.toml  remappings.txt
contracts/script/: AnvilIntegrationTest.s.sol  CheckInterfaceId.s.sol  CheckPaymasterBalance.s.sol  Deploy.s.sol  DeployAAAccountFactory.s.sol  DeployPaymaster.s.sol  DeployPaymasterSepolia.s.sol  DeploySepolia.s.sol  DeploySimplePaymaster.s.sol  FundSimplePaymaster.s.sol  Interact.s.sol  StakeSimplePaymaster.s.sol  TestSimplePaymasterGasless.s.sol  TestSimplePaymasterLocal.s.sol
contracts/src/: AAAccount.sol  AAAccountFactory.sol  SimplePaymaster.sol  SmartAccount.sol  VerifierSignaturePaymaster.sol
contracts/src/interfaces/: IEntryPoint.sol  UserOperation.sol
contracts/test/: AAAccount.t.sol  Paymaster.t.sol  SimplePaymaster.t.sol  SmartAccount.t.sol
docs/: BUNDLER_BREAKTHROUGH.md  CLI_IMPROVEMENTS_NEEDED.md  DEPLOYMENT_INFO.md  ERC4337_ISSUES_AND_SOLUTIONS.md  GAS_POLICY_DESIGN.md  PAYMASTER_IMPLEMENTATION_GUIDE.md  QUICK_REFERENCE.md  TODO.md  TODOv2.md  USER_GUIDE.md  flow-notes.md
paymaster-service/: Cargo.toml  README.md
paymaster-service/config/: default.toml  sepolia.toml  test.toml
paymaster-service/src/: api.rs  key_manager.rs  lib.rs  main.rs  signature_service.rs
paymaster-service/tests/: simple_tests.rs
