[package]
name = "aa-client"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
hex = "0.4"
clap = { version = "4.0", features = ["derive"] }
getrandom = "0.2"
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
