[package]
name = "paymaster-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP server framework
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
secp256k1 = { version = "0.28", features = ["rand"] }
sha3 = "0.10"
hex = "0.4"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.14"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
