[package]
name = "paymaster-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP server framework
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cryptography
secp256k1 = { version = "0.28", features = ["rand", "recovery"] }
sha3 = "0.10"
hex = "0.4"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
config = "0.14"

# Ethereum types
alloy-primitives = { version = "0.8", features = ["serde"] }

[dev-dependencies]
tower = "0.5"
